--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,8 @@
 # Auto detect text files and perform LF normalization
 * text=auto
+
+*.cpp linguist-language=C++
+*.cxx linguist-language=C++
+*.h linguist-language=C++
+*.hpp linguist-language=C++
+CMakeLists.txt linguist-language=C++
