--- a/.gitattributes
+++ b/.gitattributes
@@ -5,6 +5,7 @@
 *.cxx linguist-language=C++
 *.h linguist-language=C++
 *.hpp linguist-language=C++
+*.cmake linguist-language=C++
 CMakeLists.txt linguist-language=C++
 
 build/WebAssembly_Qt_6_10_1_single_threaded-Debug/ASCII-Image-Generator.js linguist-generated
