--- a/.gitattributes
+++ b/.gitattributes
@@ -7,6 +7,7 @@
 *.hpp linguist-language=C++
 *.cmake linguist-generated
 CMakeLists.txt linguist-language=C++
-
+build/Qt_6_10_1_for_macOS-Debug/ASCII-Image-Generator_autogen/EWIEGA46WW/moc_mainwindow.cpp.d linguist-generated
+build/WebAssembly_Qt_6_10_1_single_threaded-Debug/ASCII-Image-Generator_autogen/EWIEGA46WW/moc_mainwindow.cpp.d linguist-generated
 build/WebAssembly_Qt_6_10_1_single_threaded-Debug/ASCII-Image-Generator.js linguist-generated
 build/WebAssembly_Qt_6_10_1_single_threaded-Debug/qtloader.js linguist-generated
