--- a/.gitattributes
+++ b/.gitattributes
@@ -11,3 +11,10 @@ build/Qt_6_10_1_for_macOS-Debug/ASCII-Image-Generator_autogen/EWIEGA46WW/moc_mai
 build/WebAssembly_Qt_6_10_1_single_threaded-Debug/ASCII-Image-Generator_autogen/EWIEGA46WW/moc_mainwindow.cpp.d linguist-generated
 build/WebAssembly_Qt_6_10_1_single_threaded-Debug/ASCII-Image-Generator.js linguist-generated
 build/WebAssembly_Qt_6_10_1_single_threaded-Debug/qtloader.js linguist-generated
+build/WebAssembly_Qt_6_10_1_multi_threaded-Debug/qtloader.js linguist-generated
+build/WebAssembly_Qt_6_10_1_single_threaded-Debug/qtloader.js linguist-generated
+build/WebAssembly_Qt_6_10_1_multi_threaded-Debug/CMakeFiles/3.30.5/CompilerIdCXX/a.out.js linguist-generated
+build/WebAssembly_Qt_6_10_1_single_threaded-Debug/CMakeFiles/3.30.5/CompilerIdCXX/a.out.js linguist-generated
+build/Qt_6_10_1_for_macOS-Debug/.qtc/package-manager/maintenance_tool_provider.qs linguist-generated
+build/WebAssembly_Qt_6_10_1_multi_threaded-Debug/.qtc/package-manager/maintenance_tool_provider.qs linguist-generated
+build/WebAssembly_Qt_6_10_1_single_threaded-Debug/.qtc/package-manager/maintenance_tool_provider.qs linguist-generated
