Add generated files to .gitattributes

--- a/.gitattributes
+++ b/.gitattributes
@@ -18,3 +18,14 @@ build/WebAssembly_Qt_6_10_1_single_threaded-Debug/CMakeFiles/3.30.5/CompilerIdCX
 build/Qt_6_10_1_for_macOS-Debug/.qtc/package-manager/maintenance_tool_provider.qs linguist-generated
 build/WebAssembly_Qt_6_10_1_multi_threaded-Debug/.qtc/package-manager/maintenance_tool_provider.qs linguist-generated
 build/WebAssembly_Qt_6_10_1_single_threaded-Debug/.qtc/package-manager/maintenance_tool_provider.qs linguist-generated
+qtloader.js linguist-generated
+build/qtloader.js linguist-generated
+build/WebAssembly_Qt_6_10_1_multi_threaded-Debug/qtloader.js linguist-generated
+CMakeFiles/3.30.5/CompilerIdCXX/a.out.js linguist-generated
+build/CMakeFiles/3.30.5/CompilerIdCXX/a.out.js linguist-generated
+build/WebAssembly_Qt_6_10_1_multi_threaded-Debug/CMakeFiles/3.30.5/CompilerIdCXX/a.out.js linguist-generated
+ASCII-Image-Generator_autogen/EWIEGA46WW/moc_mainwindow.cpp.d linguist-generated
+build/ASCII-Image-Generator_autogen/EWIEGA46WW/moc_mainwindow.cpp.d linguist-generated
+build/Qt_6_10_1_for_macOS-Debug/ASCII-Image-Generator_autogen/EWIEGA46WW/moc_mainwindow.cpp.d linguist-generated
+
+
