--- a/.gitattributes
+++ b/.gitattributes
@@ -27,5 +27,11 @@ build/WebAssembly_Qt_6_10_1_multi_threaded-Debug/CMakeFiles/3.30.5/CompilerIdCXX
 ASCII-Image-Generator_autogen/EWIEGA46WW/moc_mainwindow.cpp.d linguist-generated
 build/ASCII-Image-Generator_autogen/EWIEGA46WW/moc_mainwindow.cpp.d linguist-generated
 build/Qt_6_10_1_for_macOS-Debug/ASCII-Image-Generator_autogen/EWIEGA46WW/moc_mainwindow.cpp.d linguist-generated
+qtloader.js linguist-generated
+build/qtloader.js linguist-generated
+build/WebAssembly_Qt_6_10_1_multi_threaded-Debug/qtloader.js linguist-generated
+CMakeFiles/3.30.5/CompilerIdCXX/a.out.js linguist-generated
+build/CMakeFiles/3.30.5/CompilerIdCXX/a.out.js linguist-generated
+build/WebAssembly_Qt_6_10_1_multi_threaded-Debug/CMakeFiles/3.30.5/CompilerIdCXX/a.out.js linguist-generated
 
 
